# media-upload

./: .gitignore  Cargo.toml  README.md  build  build_deb  config.toml
media-upload/DEBIAN/: control  preinst
media-upload/etc/: media-upload.toml
media-upload/etc/systemd/system/: media-upload.service
src/: cfg.rs  exif.rs  exif_ffmpeg.rs  exif_image.rs  handler.rs  io.rs  lib.rs  main.rs  metadata.rs  validation.rs
