[package]
name = "multipart-example"
version = "0.3.0"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
description = "Simple file uploader in Actix Web with Async/Await"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/actix/examples"
readme = "README.md"

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
url = "1.6.0"
actix-web-httpauth = "0.4.1"
config = "0.9"
lazy_static = "^0.2.8"