[package]
name = "media-uploader"
version = "0.3.0"
authors = ["Philipp Hentschel <philipp@f1ndus.de>"]
edition = "2018"
license = "MIT"
description = "Uploads all kind of media and strips metadata"
keywords = ["actix", "actix-web", "multipart"]
repository = "https://github.com/f1ndus/media-uploader"
readme = "README.md"

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
url = "1.6.0"
actix-web-httpauth = "0.4.1"
config = "0.9"
lazy_static = "^0.2.8"
rexiv2 = "0.9.0"
gexiv2-sys = "1.1.1"
failure = "0.1.7"
infer = "0.1"